--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
   <p class="myfont">For <b>best tracking</b> align the panda's face at the same level of the circles. <b>Make sure the punch goes above your shoulder</b> </p>
   </div>
   <div>
-
+  <img src="po_l.png" alt="poo" style="float:left" width="400" height="400">
   <script src="boxer.js"></script>
+  <img src="po_r.png" alt="poo" style="float:right">
 
  </div>
  <p class="footer">Developed by : kuntal.bhusan@gmail.com   &emsp; Music credits : https://www.bensound.com</p>
